# didkitty

./: Cargo.toml
cli/: Cargo.toml
cli/src/: credential.rs  did.rs  jsonld.rs  key.rs  main.rs  opts.rs  presentation.rs
lib/: Cargo.toml
lib/cbindings/: Cargo.toml
lib/src/: c.rs  error.rs  jni.rs  lib.rs
lib/web/: Cargo.toml
