[package]
name = "didkit-wasm"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
thiserror = "1.0"
js-sys = "0.3"
getrandom = { version = "0.4" }
rand = { version = "0.10" }
chrono = { version = "0.4", features = ["wasmbind"] }

[dependencies.didkitx]
path = "../"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["generate", "issue", "verify", "invoke", "delegate"]

generate = []
issue = []
verify = []
credential = []
presentation = []
delegate = []
invoke = []
zcap = []
